--- a/themes/typography/layout/partial/comments.jade
+++ b/themes/typography/layout/partial/comments.jade
@@ -53,8 +53,7 @@ if theme.dove
                     br
                     |         1. 将您的评论用信封装好
                     br
-                    |         2. 使用信鸽函至&nbsp;
-                    != domain
+                    |         2. 使用信鸽函至&nbsp;半透明的海岸线上
                     br
                     |         3. 我们在收到您的评论后将立即审核并更新至网站
                     br
