--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -15,9 +15,9 @@ html(lang="zh-CN")
 
 
         script(src= url_for('js/jquery-3.1.0.min.js'))
-        script(src= url_for('js/bootstrap.min.js'))
-        script(src= url_for('js/jquery-migrate-1.2.1.min.js'))
-        script(src= url_for('js/jquery.appear.js'))
-        script(src= url_for('js/google-analytics.js'))
-        script(src= url_for('js/typography.js'))
+        script(async,defer,src= url_for('js/bootstrap.min.js'))
+        script(async,defer,src= url_for('js/jquery-migrate-1.2.1.min.js'))
+        script(async,defer,src= url_for('js/jquery.appear.js'))
+        script(async,defer,src= url_for('js/typography.js'))
+        script(async,defer,src="https://umami.lijiakaijun.cyou/nya.js",data-website-id="c2ea781a-dd7f-45a0-b0c0-280f7903060c",data-do-not-track="true",data-domains="taranakineko.pages.dev")
 
