--- a/themes/typography/layout/mixins.jade
+++ b/themes/typography/layout/mixins.jade
@@ -35,7 +35,10 @@ mixin make_post(item, is_detail)
         if is_detail
             p.post-abstract!= item.content
         else
-            p.post-abstract!= truncate(strip_html(item.content.replace(/<pre(?: |>)[^]*?<\/pre>/gm, ' ')), {length: 160})
+            if item.desc
+                p.post-abstract!= item.desc
+            else
+                p.post-abstract!= truncate(strip_html(item.content.replace(/<pre(?: |>)[^]*?<\/pre>/gm, ' ')), {length: 160})
 
 mixin make_page_links()
     if site.pages
