--- a/themes/typography/layout/post.jade
+++ b/themes/typography/layout/post.jade
@@ -8,6 +8,7 @@ block site_title
 block description
     - var desc = page.desc || strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150);
     meta(name="description", content=desc)
+    meta(name="og:title", content=page.title)
     meta(name="og:description", content=desc)
     meta(name="twitter:site", content=config.title)
     meta(name="twitter:title", content=page.title)
