--- a/themes/typography/raw/scss/style.scss
+++ b/themes/typography/raw/scss/style.scss
@@ -334,6 +334,13 @@ a {
   margin: 0 10px 0 0;
 }
 
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid;
+}
+
 img {
   display: block;
   max-width: 100%;
