Noto Emoji支持 && 新文章 && 链接页

--- a/themes/typography/raw/scss/style.scss
+++ b/themes/typography/raw/scss/style.scss
@@ -1,10 +1,15 @@
+@font-face {
+  font-family: 'Emoji';
+  src: url('/fonts/NotoColorEmoji.woff2');
+}
+
 $backgroundColor: #ffffff !default;
 $foregroundColor: #2e405b !default;
 $fontList: "Source Sans Pro", "Roboto", "Helvetica", "Helvetica Neue",
   "Source Han Sans SC", "Source Han Sans TC", "PingFang SC", "PingFang HK",
-  "PingFang TC", sans-serif !default;
+  "PingFang TC", "Emoji", sans-serif !default;
 $titleFontList: "HiraMinProN-W6", "Source Han Serif CN", "Source Han Serif SC",
-  "Source Han Serif TC", serif !default;
+  "Source Han Serif TC", "Emoji", serif !default;
 $verticalPrimaryPaddingTopPatch: 0;
 $verticalSecondaryPaddingTopPatch: 1px;
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,300,400,600");
@@ -25,6 +30,7 @@ h6 {
 }
 
 html {
+  font-family: $fontList;
   background: $backgroundColor;
 }
 
