修复加载字体中时无字问题

--- a/themes/typography/raw/scss/style.scss
+++ b/themes/typography/raw/scss/style.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Emoji';
   src: url('/fonts/NotoColorEmoji.woff2');
+  font-display: swap;
 }
 
 $backgroundColor: #ffffff !default;
