--- a/themes/typography/layout/post.jade
+++ b/themes/typography/layout/post.jade
@@ -12,21 +12,16 @@ block description
     meta(name="og:description", content=desc)
     meta(name="twitter:site", content=config.title)
     meta(name="twitter:title", content=page.title)
-    meta(name="twitter:card", content="summary")
+    if page.twitter == "big"
+       meta(name="twitter:card", content="summary_large_image")
+       meta(property="og:image", content=page.twitter_pic)
+    else
+        meta(name="twitter:card", content="summary")
 
 block content
     .autopagerize_page_element: .content: .post-page
         include mixins
         +make_post(page, true)
-        .share
-            span= __('share')
-            | &nbsp;
-            span.soc
-                a.fa.fa-bookmark(href="javascript:(function(){EN_CLIP_HOST='http://www.evernote.com';try{var%20x=document.createElement('SCRIPT');x.type='text/javascript';x.src=EN_CLIP_HOST+'/public/bookmarkClipper.js?'+(new%20Date().getTime()/100000);document.getElementsByTagName('head')[0].appendChild(x);}catch(e){location.href=EN_CLIP_HOST+'/clip.action?url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title);}})();", ref="nofollow", target="_blank")
-            span.soc
-                a.fa.fa-weibo(href="javascript:void((function(s,d,e){try{}catch(e){}var f='http://service.weibo.com/share/share.php?',u=d.location.href,p=['url=',e(u),'&title=',e(d.title),'&appkey=2924220432'].join('');function a(){if(!window.open([f,p].join(''),'mb',['toolbar=0,status=0,resizable=1,width=620,height=450,left=',(s.width-620)/2,',top=',(s.height-450)/2].join('')))u.href=[f,p].join('');};if(/Firefox/.test(navigator.userAgent)){setTimeout(a,0)}else{a()}})(screen,document,encodeURIComponent));")
-            span.soc
-                a.fa.fa-twitter(href=url_for("http://twitter.com/home?status=" + "" + config.url + "/" + page.path + "%20" + config.title + "%20" + page.title + ""))
         - var prev = page.prev ? page.prev.path : false;
         - var next = page.next ? page.next.path : false;
         .pagination
