--- a/themes/typography/layout/partial/comments.jade
+++ b/themes/typography/layout/partial/comments.jade
@@ -30,6 +30,10 @@ if theme.livere
             })(document, 'script');
         noscript  Please activate JavaScript for write a comment in LiveRe
 
+if theme.giscus
+    if theme.giscus === true 
+        script(src="https://giscus.app/client.js", data-repo="taranakiNeko/blog-comments", data-repo-id="R_kgDOIOrgGw", data-category="General", data-category-id="DIC_kwDOIOrgG84CSAlm", data-mapping="pathname", data-strict="0", data-reactions-enabled="1", data-emit-metadata="0", data-input-position="top", data-theme="preferred_color_scheme", data-lang="zh-CN", data-loading="lazy", crossorigin="anonymous", async)
+
 if theme.dove
     if theme.dove === true
         - var domain = "Null";
