New Post 修改上一篇和下一篇超連結位置 優化Noto Color Emoji 加載方式

--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -19,9 +19,12 @@ meta(content="telephone=no",name="format-detection")
 
 meta(name="renderer",content="webkit")
 link(rel="short icon", href="images/favicon.png",type="image/x-icon")
+link(rel="preconnect" href="https://fonts.googleapis.com")
+link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 link(rel="stylesheet", href= url_for('css/bootstrap.min.css'))
 //- link(rel="stylesheet", href= url_for('css/font-awesome.min.css'))
 //- link(rel="stylesheet", href= url_for('css/typography-custom-font.css'))
 link(rel="stylesheet", href= url_for('css/style.css'), media="(prefers-color-scheme: light)")
 link(rel="stylesheet", href= url_for('css/style-dark.css'), media="(prefers-color-scheme: dark)")
 link(rel="alternate" type="application/atom+xml" title="ATOM 1.0" href="/atom.xml")
+link(href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet")
