--- a/themes/typography/layout/partial/footer.jade
+++ b/themes/typography/layout/partial/footer.jade
@@ -4,6 +4,8 @@ footer
         !=currYear
         | &nbsp;
         a(target="_blank", href=config.url,  rel="noopener noreferrer")!=theme.author ? theme.author : config.author ? config.author : config.title
+    p Licensed under CC BY-SA 4.0.
+    p Please indicate the source.
     p Theme&nbsp;
         a(target="_blank", href="https://github.com/SumiMakito/hexo-theme-typography", rel="noopener noreferrer") Typography
         | &nbsp;by&nbsp;
