--- a/themes/typography/layout/post.jade
+++ b/themes/typography/layout/post.jade
@@ -24,19 +24,25 @@ block content
         +make_post(page, true)
         - var prev = page.prev ? page.prev.path : false;
         - var next = page.next ? page.next.path : false;
-        .pagination
-            p.clearfix
+        div
+            p.clearfix-r
                 if prev
                     span.pre.pagbuttons
                         a(role="navigation",href=url_for(prev), title=page.prev.title)
                             i.fa.fa-angle-double-left
                             |&nbsp;
                             != __('prev_post')+': ' + page.prev.title
+                else
+                    span.pre.pagbuttons
+                        i.fa.fa-angle-double-left
+                        |&nbsp;
+                        != __('prev_post')+': ' + '没有文章了~'
+            p.clearfix
                 if next
                     span &nbsp;
-                    span.next.pagbuttons
-                        a(role="navigation",href=url_for(next), title=page.next.title)
-                            != __('next_post')+': ' + page.next.title
+                    span.next-pagbuttons
+                        a(role="navigation",href=url_for(next), title=page.next.title, align=right)
+                            !=__('next_post')+': ' + page.next.title
                             |&nbsp;
                             i.fa.fa-angle-double-right
         include partial/comments
