更换 Umami 域名，新增部分联系方式

--- a/themes/typography/layout/partial/nav.jade
+++ b/themes/typography/layout/partial/nav.jade
@@ -42,6 +42,9 @@ div#site-nav.site-title-links
             if theme.telegram
                 a(href="https://t.me/" + theme.telegram, target="_blank", rel="noopener noreferrer", aria-label="Telegram")
                     i.fa.fa-telegram &nbsp;
+            if theme.mastodon
+                a(href=theme.mastodon, target="_blank", rel="noopener noreferrer", aria-label="Mastodon")
+                    i.fa.fa-globe &nbsp;
             if theme.mail
                 a(href="mailto:" + theme.mail, target="_blank", rel="noopener noreferrer", aria-label="Mail")
                     i.fa.fa-envelope &nbsp;
