--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -22,7 +22,7 @@ link(rel="short icon", href="images/favicon.png",type="image/x-icon")
 link(rel="preconnect" href="https://fonts.googleapis.com")
 link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 link(rel="stylesheet", href= url_for('css/bootstrap.min.css'))
-//- link(rel="stylesheet", href= url_for('css/font-awesome.min.css'))
+link(rel="stylesheet", href= url_for('css/font-awesome.min.css'))
 //- link(rel="stylesheet", href= url_for('css/typography-custom-font.css'))
 link(rel="stylesheet", href= url_for('css/style.css'), media="(prefers-color-scheme: light)")
 link(rel="stylesheet", href= url_for('css/style-dark.css'), media="(prefers-color-scheme: dark)")
