--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -19,5 +19,5 @@ html(lang="zh-CN")
         script(async,defer,src= url_for('js/jquery-migrate-1.2.1.min.js'))
         script(async,defer,src= url_for('js/jquery.appear.js'))
         script(async,defer,src= url_for('js/typography.js'))
-        script(async,defer,src="https://umami.lijiakaijun.cyou/nya.js",data-website-id="93be3fc1-8136-445b-88dc-957fe32c1bb8",data-do-not-track="true")
+        script(async,defer,data-website-id="7e659108-8a8e-471b-99ee-14197b5f014c",src="https://umami.nekoq.eu.org/nya.js",data-do-not-track="true")
 
