添加网站信息（折叠） && 主动交换链接

--- a/themes/typography/raw/scss/style.scss
+++ b/themes/typography/raw/scss/style.scss
@@ -384,6 +384,29 @@ footer * {
   text-align: right;
 }
 
+details {
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  padding: .5em .5em 0;
+}
+
+summary {
+  display: list-item;
+  margin: -.5em -.5em 0;
+  padding: .5em;
+}
+
+details[open] {
+  padding: .5em;
+}
+
+details[open] summary {
+  border-bottom: 1px solid #aaa;
+  margin-bottom: .5em;
+}
+
+
+
 li {
   margin: 5px 0;
 }
