--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -18,7 +18,7 @@ meta(content="black",name="apple-mobile-web-app-status-bar-style")
 meta(content="telephone=no",name="format-detection")
 
 meta(name="renderer",content="webkit")
-link(rel="short icon", href="images/favicon.ico",type="image/x-icon")
+link(rel="short icon", href= config.url + "/images/favicon.ico",type="image/x-icon")
 link(rel="preconnect" href="https://fonts.googleapis.com")
 link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 link(rel="stylesheet", href= url_for('css/bootstrap.min.css'))
