--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -41,7 +41,7 @@ else
     meta(property="og:image", content=config.url+'/static/images/twitter-card.png')
     meta(property="twitter:image", content=config.url+'/static/images/twitter-card.png')
 
-link(rel="short icon", href= config.url + "/images/favicon.ico",type="image/x-icon")
+link(rel="short icon", href="/static/favicon.ico")
 link(rel="preconnect" href="https://fonts.googleapis.com")
 link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 link(rel="stylesheet", href= url_for('css/bootstrap.min.css'))
