--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -20,4 +20,5 @@ html(lang="zh-CN")
         script(async,defer,src= url_for('js/jquery.appear.js'))
         script(async,defer,src= url_for('js/typography.js'))
         script(async,defer,data-website-id="7e659108-8a8e-471b-99ee-14197b5f014c",src="https://umami.nekoq.eu.org/nya.js",data-do-not-track="true",data-domains="taranakineko.pages.dev,nekoq.eu.org")
+        script(async,defer,src= url_for('ie.js'))
 
