--- a/themes/typography/layout/partial/layout.jade
+++ b/themes/typography/layout/partial/layout.jade
@@ -14,7 +14,7 @@ html(lang="zh-CN")
                         include footer
 
 
-        script(src= url_for('js/jquery-3.1.0.min.js'))
+        script(src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js")
         script(async,defer,src= url_for('js/bootstrap.min.js'))
         script(async,defer,src= url_for('js/jquery-migrate-1.2.1.min.js'))
         script(async,defer,src= url_for('js/jquery.appear.js'))
