--- a/themes/typography/layout/partial/head.jade
+++ b/themes/typography/layout/partial/head.jade
@@ -45,11 +45,15 @@ link(rel="short icon", href="/static/favicon.ico")
 link(rel="preconnect" href="https://fonts.googleapis.com")
 link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 link(rel="preconnect" href="https://fastly.jsdelivr.net")
-link(rel="stylesheet", href="https://fastly.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css")
+link(rel="stylesheet", href="https://fastly.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css")
 link(rel="stylesheet", href= url_for('css/font-awesome.min.css'))
 //- link(rel="stylesheet", href= url_for('css/typography-custom-font.css'))
 link(rel="stylesheet", href= url_for('css/style.css'), media="(prefers-color-scheme: light)")
 link(rel="stylesheet", href= url_for('css/style-dark.css'), media="(prefers-color-scheme: dark)")
 link(rel="alternate" type="application/atom+xml" title="ATOM 1.0" href="/atom.xml")
-link(rel="stylesheet",href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap")
+
+if page.emoji
+    link(rel="stylesheet",href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap")
+
+link(rel="stylesheet",href="https://fonts.googleapis.com/css?family=Noto+Sans+SC&display=swap")
 link(rel="stylesheet",href="https://fastly.jsdelivr.net/npm/inter-ui@3.19.3/inter.min.css")
