--- a/themes/typography/raw/scss/style-dark.scss
+++ b/themes/typography/raw/scss/style-dark.scss
@@ -1,5 +1,5 @@
-$backgroundColor: #2e405b;
-$foregroundColor: #ffffff;
+$backgroundColor: #373C38;
+$foregroundColor: #f8f9fa;
 
 
 @import './style.scss';
