竖屏设备中社交链接优化

--- a/themes/typography/raw/scss/style.scss
+++ b/themes/typography/raw/scss/style.scss
@@ -307,6 +307,10 @@ a {
   margin: 0 5px 0 0;
   font-size: 22px !important;
 
+  @media screen and (orientation:portrait) {
+    margin: 0 5px 0 0;
+    font-size: 28px !important;
+  }
   a {
     border-bottom: solid transparent 2px;
 
