maximum-scale 删除

--- a/themes/typography/layout/partial/head.pug
+++ b/themes/typography/layout/partial/head.pug
@@ -12,7 +12,7 @@ if page.keywords
 else
     meta(name="keywords" content= config.keywords ? config.keywords : theme.keywords ? theme.keywords : "")
 
-meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0",name="viewport")
+meta(content="width=device-width, initial-scale=1.0",name="viewport")
 meta(content="yes",name="apple-mobile-web-app-capable")
 meta(content="black",name="apple-mobile-web-app-status-bar-style")
 meta(content="telephone=no",name="format-detection")
