--- a/themes/typography/layout/partial/layout.pug
+++ b/themes/typography/layout/partial/layout.pug
@@ -19,6 +19,6 @@ html(lang="zh-CN")
         //- script(async,defer,src= url_for('js/jquery-migrate-1.2.1.min.js'))
         //- script(async,defer,src= url_for('js/jquery.appear.js'))
         script(async,defer,src= url_for('js/typography.js'))
-        script(async,defer,data-website-id="7e659108-8a8e-471b-99ee-14197b5f014c",src="https://umami.nekoq.eu.org/nya.js",data-do-not-track="true",data-domains="taranakineko.pages.dev,nekoq.eu.org")
+        script(async,defer,data-website-id="80e637e6-9cdd-4675-a19d-519785bdb3a8",src="https://umami.nekoq.eu.org/script.js",data-do-not-track="true",data-domains="taranakineko.pages.dev,nekoq.eu.org")
         script(async,defer,src= url_for('ie.js'))
 
