--- a/themes/typography/layout/partial/comments.pug
+++ b/themes/typography/layout/partial/comments.pug
@@ -32,7 +32,7 @@ if theme.livere
 
 if theme.giscus
     if theme.giscus === true 
-        script(src="https://giscus.app/client.js", data-repo="taranakiNeko/blog-comments", data-repo-id="R_kgDOIOrgGw", data-category="General", data-category-id="DIC_kwDOIOrgG84CSAlm", data-mapping="pathname", data-strict="0", data-reactions-enabled="1", data-emit-metadata="0", data-input-position="top", data-theme="preferred_color_scheme", data-lang="zh-CN", data-loading="lazy", crossorigin="anonymous", async)
+        script(src="https://giscus.app/client.js", data-repo="taranakiNeko/blog-comments", data-repo-id="R_kgDOIOrgGw", data-category="General", data-category-id="DIC_kwDOIOrgG84CSAlm", data-mapping="pathname", data-strict="0", data-reactions-enabled="1", data-emit-metadata="0", data-input-position="top", data-theme="preferred_color_scheme", data-lang="zh-CN", data-loading="lazy", crossorigin="anonymous", async,defer)
 
 if theme.dove
     if theme.dove === true
