--- a/themes/typography/layout/partial/head.pug
+++ b/themes/typography/layout/partial/head.pug
@@ -47,7 +47,7 @@ link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 link(rel="preconnect" href="https://fastly.jsdelivr.net")
 link(rel="stylesheet", href= url_for('css/bootstrap.min.css'))
 //- link(rel="stylesheet", href= url_for('css/font-awesome.min.css'))
-link(rel="stylesheet", href="https://fastly.jsdelivr.net/npm/remixicon/fonts/remixicon.css")
+link(rel="stylesheet", href="https://fastly.jsdelivr.net/npm/remixicon/fonts/remixicon.min.css")
 //- link(rel="stylesheet", href= url_for('css/typography-custom-font.css'))
 link(rel="stylesheet", href= url_for('css/style.css'), media="(prefers-color-scheme: light)")
 link(rel="stylesheet", href= url_for('css/style-dark.css'), media="(prefers-color-scheme: dark)")
