修改和补充一些东西
  - 本地调用 Noto Color Emoji
  - Line-1 补充部分内容

--- a/themes/stellaris/source/css/_custom.styl
+++ b/themes/stellaris/source/css/_custom.styl
@@ -37,7 +37,7 @@ $dark-background-mobile = convert(hexo-config('style.color.dark.background-mobil
 // 陈叔叔CDN
 // @import('//s1.hdslb.com/bfs/static/jinkela/long/font/regular.css')
 
-$ff-body = 'Inter var', 'Noto Sans SC', sans-serif, sans
+$ff-body = 'Inter var', 'Noto Color Emoji', 'Noto Sans SC', sans-serif, sans
 $ff-code = monospace
 
 $ff-logo = $ff-body
