--- a/themes/stellaris/source/css/_layout/tag-plugins/sites.styl
+++ b/themes/stellaris/source/css/_layout/tag-plugins/sites.styl
@@ -23,6 +23,8 @@
   &:hover
     box-shadow: $boxshadow-float, $boxshadow-card-float
     transform: translateY(-2px)
+  @media (prefers-color-scheme: dark)
+    background: var(--block)
 
 .sites-wrap .group-body
   display: grid
@@ -52,6 +54,13 @@
       height: 120px
     object-fit: cover
     //box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.2)
+
+    if hexo-config('style.darkmode') == 'auto'
+      @media (prefers-color-scheme: dark)
+        filter: brightness(0.7)
+
+    if hexo-config('style.darkmode') == 'always'
+      filter: brightness(0.7)
   .info
     margin-top: 0.5rem
     margin-left:0.3rem
