--- a/themes/stellaris/source/css/_custom.styl
+++ b/themes/stellaris/source/css/_custom.styl
@@ -33,7 +33,7 @@ $dark-code = convert(hexo-config('style.color.dark.code'))
 $dark-background-mobile = convert(hexo-config('style.color.dark.background-mobile'))
 
 @import ('https://fastly.jsdelivr.net/npm/inter-ui@3.19.3/inter.min.css')
-@import ('https://fonts.googleapis.com/css?family=Noto+Sans+SC&display=swap')
+@import ('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500&display=swap')
 // 陈叔叔CDN
 // @import('//s1.hdslb.com/bfs/static/jinkela/long/font/regular.css')
 
@@ -64,6 +64,7 @@ $border-image = 6px
 
 // 可以动态变化的属性
 :root
+  font-feature-settings: "case","cpsp","ss04","cv01","cv02","cv03","cv04","cv06","cv11";
   --width-left: 288px
   --width-main: 720px
   --gap-l: 16px
