--- a/themes/stellaris/source/css/_custom.styl
+++ b/themes/stellaris/source/css/_custom.styl
@@ -33,11 +33,11 @@ $dark-code = convert(hexo-config('style.color.dark.code'))
 $dark-background-mobile = convert(hexo-config('style.color.dark.background-mobile'))
 
 @import ('https://fastly.jsdelivr.net/npm/inter-ui@3.19.3/inter.min.css')
-@import ('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500&display=swap')
+// @import ('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500&display=swap')
 // 陈叔叔CDN
 // @import('//s1.hdslb.com/bfs/static/jinkela/long/font/regular.css')
 
-$ff-body = 'Inter var', 'Noto Color Emoji', 'Noto Sans SC', sans-serif, sans
+$ff-body = 'Inter var',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI,Roboto','Helvetica Neue',Arial,'Noto Sans',sans-serif,sans,'Noto Color Emoji','Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol'
 $ff-code = monospace
 
 $ff-logo = $ff-body
