--- a/themes/stellaris/source/css/_custom.styl
+++ b/themes/stellaris/source/css/_custom.styl
@@ -35,9 +35,9 @@ $dark-background-mobile = convert(hexo-config('style.color.dark.background-mobil
 @import ('https://fastly.jsdelivr.net/npm/inter-ui@3.19.3/inter.min.css')
 // @import ('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500&display=swap')
 // 陈叔叔CDN
-// @import('//s1.hdslb.com/bfs/static/jinkela/long/font/regular.css')
+@import('//s1.hdslb.com/bfs/static/jinkela/long/font/regular.css')
 
-$ff-body = 'Inter var',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI,Roboto','Helvetica Neue',Arial,'Noto Sans',sans-serif,sans,'Noto Color Emoji','Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol'
+$ff-body = 'Inter var', 'Noto Color Emoji', 'HarmonyOS_Regular', sans-serif, sans
 $ff-code = monospace
 
 $ff-logo = $ff-body
