--- a/themes/stellaris/source/css/_custom.styl
+++ b/themes/stellaris/source/css/_custom.styl
@@ -38,7 +38,7 @@ $dark-background-mobile = convert(hexo-config('style.color.dark.background-mobil
 @import('//s1.hdslb.com/bfs/static/jinkela/long/font/regular.css')
 
 $ff-body = 'Inter var', 'Noto Color Emoji', 'HarmonyOS_Regular', sans-serif, sans
-$ff-code = monospace
+$ff-code = Consolas, monospace
 
 $ff-logo = $ff-body
 
