--- a/themes/stellaris/source/css/_custom.styl
+++ b/themes/stellaris/source/css/_custom.styl
@@ -33,11 +33,12 @@ $dark-code = convert(hexo-config('style.color.dark.code'))
 $dark-background-mobile = convert(hexo-config('style.color.dark.background-mobile'))
 
 @import ('https://fastly.jsdelivr.net/npm/inter-ui@3.19.3/inter.min.css')
-// @import ('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500&display=swap')
-// 陈叔叔CDN
-@import('//s1.hdslb.com/bfs/static/jinkela/long/font/regular.css')
+// 字体
+$font-css = hexo-config('style.font.css')
+$font-face = convert(hexo-config('style.font.name'))
+@import($font-css)
 
-$ff-body = 'Inter var', 'Noto Color Emoji', 'HarmonyOS_Regular', sans-serif, sans
+$ff-body = 'Inter var', 'Noto Color Emoji', $font-face, sans-serif, sans
 $ff-code = Consolas, monospace
 
 $ff-logo = $ff-body
