--- a/themes/stellaris/source/css/_plugins/comments/waline.styl
+++ b/themes/stellaris/source/css/_plugins/comments/waline.styl
@@ -5,11 +5,11 @@
   --waline-light-grey: #999;
   --waline-dark-grey: #666;
   /* 主题色 */
-  --waline-theme-color: #3498db;
-  --waline-active-color: #2ecc71;
+  --waline-theme-color: convert(hexo-config('style.color.common.button'))
+  --waline-active-color: convert(hexo-config('style.color.common.button'))
   /* 布局颜色 */
   --waline-color: #444;
-  --waline-bgcolor: #fff;
+  --waline-bgcolor: #ffffffb2;
   --waline-bgcolor-light: #f8f8f8;
   --waline-bgcolor-hover: #f0f0f0;
   --waline-border-color: #ddd;
@@ -41,7 +41,7 @@
     /* 布局颜色 */
 
     --waline-color: #fff;
-    --waline-bgcolor: var(--block);
+    --waline-bgcolor: #2b2f33b2;
     --waline-bgcolor-light: #272727;
     --waline-border-color: #333;
     --waline-disable-bgcolor: #444;
