--- a/themes/stellaris/source/css/_layout/tag-plugins/sites.styl
+++ b/themes/stellaris/source/css/_layout/tag-plugins/sites.styl
@@ -15,7 +15,7 @@
     display: block
 
 .site-card
-  background: white
+  background: var(--card)
   padding: 2px
   border-radius: 4px
   box-shadow: 0 1px 2px 0px rgba(0,0,0,0.2);
@@ -23,8 +23,6 @@
   &:hover
     box-shadow: $boxshadow-float, $boxshadow-card-float
     transform: translateY(-2px)
-  @media (prefers-color-scheme: dark)
-    background: var(--block)
 
 .sites-wrap .group-body
   display: grid
