--- a/themes/stellaris/source/css/_custom.styl
+++ b/themes/stellaris/source/css/_custom.styl
@@ -33,12 +33,12 @@ $dark-code = convert(hexo-config('style.color.dark.code'))
 $dark-background-mobile = convert(hexo-config('style.color.dark.background-mobile'))
 
 // 字体
-$font-css = hexo-config('style.font.css')
-$font-face = convert(hexo-config('style.font.name'))
-@import($font-css)
-@import ('https://fastly.jsdelivr.net/npm/inter-ui@3.19.3/inter.min.css')
+$font-face = convert(hexo-config('style.font_face'))
+if hexo-config('style.custom_font_css.enabled')
+  $font-css = hexo-config('style.custom_font_css.css')
+  @import($font-css)
 
-$ff-body = 'Inter var', 'Noto Color Emoji', $font-face, sans-serif, sans
+$ff-body = $font-face, sans-serif, sans
 $ff-code = monospace
 
 $ff-logo = $ff-body
